replace collectors with toList