@@ -3,7 +3,6 @@ package com.booking.converter;
 import com.booking.dto.PropertyDto;
 import com.booking.model.Property;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -36,7 +35,7 @@ public class PropertyConverter {
   public List<PropertyDto> toDtoList(List<Property> properties) {
     return properties.stream()
         .map(this::toDto)
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
